# pro-code-agents

./: .gitattributes  .gitignore  .gitmodules  =1.2.0b2  CHANGELOG.md  CODE_OF_CONDUCT.md  create-env.ps1  create-env.sh  imgbuild-task.md  package-lock.json  package.json  readme.md  requirements.txt  secrets.md
demos/01-essentials/01-ai-foundry/05-rag/rag-azure-py/: .env.copy  2.document-vectorization.ipynb  IMPLEMENTATION_NOTES.md  config.py  create_search_index.old.py  create_search_index.py  create_vectorized_index.py  document_processor.py  document_retriever.py  evaluate.py  get_product_documents.py  initialize_clients.py  pyproject.toml  readme.md  requirements.txt  search_index_manager.py  search_index_uploader.py  search_tester.py  test-index.py  upload-policies.py  upload_handler.py
demos/02-agent-service/02-knowledge-tools/agent-knowledge-tools-py/: .env.copy  COMPOSITE-MIGRATION.md  QUICK_REFERENCE.md  agent-input-file.py  agent-response-format.py  agents-ai-search-rag-MIGRATION.md  agents-ai-search-rag.py  agents-azfunction-MIGRATION.md  agents-azfunction.py  agents-bing-grounding-MIGRATION.md  agents-bing-grounding.py  agents-browser-automation-MIGRATION.md  agents-browser-automation.py  agents-code-interpreter-MIGRATION.md  agents-code-interpreter.py  agents-computer-use-MIGRATION.md  agents-computer-use.py  agents-evaluations.py  agents-file-search-MIGRATION.md  agents-file-search.py  agents-foundry-iq.py  agents-function-calling-MIGRATION.md  agents-function-calling.py  agents-mcp-MIGRATION.md  agents-mcp.py  agents-rest-calling-MIGRATION.md  agents-rest-calling.py  agents-sharepoint-MIGRATION.md  agents-sharepoint.py  foundry-iq-todo.md  function_calling_functions.py  migration.md  pyproject.toml  readme.md  requirements.txt  sandbox_downloader.py  todo-ai-search-rag.md  todo-azfunction.md  todo-bing-grounding.md  todo-browser-automation.md  (+6 more)
demos/02-agent-service/03-connected-agents/connected-agents-py/: .env  .env.copy  .gitignore  IMPLEMENTATION_SUMMARY.md  MERMAID_DIAGRAMS.md  README.md  agent_interactions.md  agent_triage.py  connected_agent.py  demo_http_visualization.py  log_util.py  logging_config.py  mermaid_logger.py  pyproject.toml  requirements.txt  test_http_visualization.py  upgrade.md
demos/02-agent-service/03-connected-agents/connected-agents-py/demo_diagrams/: TICKET-20251111_230548.md
demos/02-agent-service/03-connected-agents/connected-agents-py/diagrams/: TICKET-20251111_235322.md  TICKET-20251111_235348.md  TICKET-20251111_235406.md  TICKET-20251111_235437.md  TICKET-20251112_001301.md  TICKET-20251112_001458.md  TICKET-20251112_001551.md  TICKET-20251112_001635.md  Users_can_t_reset_their_password_20251111_225122.md  Users_can_t_reset_their_password_20251111_225444.md  Users_can_t_reset_their_password_20251111_225816.md  Users_can_t_reset_their_password_20251111_232448_default.md  Users_can_t_reset_their_password_20251111_232448_http.md  Users_can_t_reset_their_password_20251111_232448_verbose.md  Users_can_t_reset_their_password_20251112_002553_default.md  Users_can_t_reset_their_password_20251112_002553_http.md  Users_can_t_reset_their_password_20251112_002553_verbose.md  Users_can_t_reset_their_password_20251112_071642_default.md  Users_can_t_reset_their_password_20251112_071642_http.md  Users_can_t_reset_their_password_20251112_071642_verbose.md
demos/02-agent-service/03-connected-agents/connected-agents-py/templates/: combined.md.j2  default.md.j2  http.md.j2  verbose.md.j2
demos/02-agent-service/03-tracing-monitoring/agent-knowledge-tools-py/: .env.copy  function_calling_functions.py  pyproject.toml
demos/02-agent-service/04-agent-framework/af-azure-orchestration-py/: .gitignore  diagram_generator.py  log_plugin.py  log_util.py  pyproject.toml  readme.md  requirements.txt  resolve_incident.py
demos/02-agent-service/04-weather-agent/: .env.copy  .gitignore  pyproject.toml  readme.md  requirements.txt  weather_agent.py  weather_functions.py
demos/03-agent-framework/01-basics/agentfw_basics-py/: .env  agentfw_create_agent.py  agentfw_direct_openai_chat.py  agentfw_function_tool_calculator.py  agentfw_long_term_memory.py  agentfw_middleware.py  agentfw_middleware_complete.py  agentfw_multimodal.py  agentfw_multiple_tools.py  agentfw_observability.py  agentfw_streaming.py  agentfw_structured_output.py  agentfw_threading_auto.py  agentfw_use_existing_agent.py  pdf_converter.py  pyproject.toml  readme.md  requirements.txt
demos/03-agent-framework/01-intro/agentfw-agent-py/: .env.copy  .gitignore  claim_submission.py  email_plugin.py  pyproject.toml  readme.md  requirements.txt
demos/03-agent-framework/02-basics/agentfw_basics-py/: .env copy  .env.copy  .gitignore  agentfw-migration-status.md  agentfw_chat_history.py  agentfw_create_agent.py  agentfw_long_term_memory.py  agentfw_middleware.py  agentfw_multimodal.py  agentfw_multiple_tools.py  agentfw_observability.py  agentfw_openai_chat.py  agentfw_streaming.py  agentfw_structured_output.py  agentfw_threading.py  agentfw_threading_auto.py  agentfw_use_existing_agent.py  migration-afw.md  outcome.md  progress.md  pyproject.toml  readme.md  requirements.txt  thread_history.json  upgrade.md
demos/03-agent-framework/02-basics/agentfw_basics-py-foundry/: .env.copy  .gitignore  MIGRATION.md  agents-delete-all.py  chat_history.py  create_agent.py  function_calling.py  long_term_memory.py  multimodal.py  observability.py  openai_chat.py  pyproject.toml  readme.md  requirements.txt  streaming.py  structured_output.py  threading.py  use_existing_agent.py
demos/03-agent-framework/04-orchestration-workflow/agentfw_workflows-py/: .env.copy  .gitignore  agentfw_agents_in_workflow.py  agentfw_branching_workflow.py  agentfw_concurrent_workflow.py  agentfw_interactive_checkpointing.py  agentfw_sequential_workflow.py  agentfw_visualization_workflow.py  agentfw_weather_devui.py  pyproject.toml  readme.md  requirements.txt
demos/03-agent-framework/05-orchestration/agentfw-orchestration-py/: pyproject.toml
demos/03-agent-service/01-introduction/agent-basics-py/: pyproject.toml  readme.md
(+1539 files in other folders)
