[project]
name = "weather-agent"
version = "0.1.0"
description = "Azure Weather Agent demo using Azure AI Agent Service with function calling"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "azure-identity>=1.16.0",
    "azure-ai-projects>=2.0.0b2",
    "azure-ai-agents>=1.2.0b6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
