[project]
name = "connected-agents-py"
version = "0.1.0"
description = "AI Connected Agents demo with triage functionality"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "azure-identity>=1.16.0",
    "azure-ai-projects>=2.0.0b2",
    "azure-ai-agents>=1.2.0b6",
    "colorama>=0.4.6",
]
