[project]
name = "connected-agents-py"
version = "0.1.0"
description = "AI Connected Agents demo with triage functionality"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "azure-identity>=1.16.0",
    "agent-framework-azure-ai==1.0.0b251120",
    "colorama>=0.4.6",
]
