[project]
name = "foundry-agents-demos"
version = "0.2.0"
description = "Microsoft Foundry Agents demos using Azure AI Foundry Responses API"
requires-python = ">=3.11"
dependencies = [
    "azure-identity==1.25.1",
    "python-dotenv==1.2.1",
    "azure-ai-projects==2.0.0b2",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
