[project]
name = "agent-framework-demos-part1"
version = "0.1.0"
description = "Microsoft Agent Framework demos with Azure AI Foundry and Azure OpenAI"
requires-python = ">=3.12"
dependencies = [
    "azure-identity==1.25.1",
    "python-dotenv==1.2.1",
    "azure-ai-projects>=2.0.0b2",
    "azure-ai-agents==1.2.0b5",
    "agent-framework==1.0.0b251120",
    "agent-framework-azure-ai==1.0.0b251120",
    "agent-framework-devui==1.0.0b251120",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
