[project]
name = "rag-azure"
version = "0.1.0"
description = "Azure AI Foundry RAG Demo"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "azure-ai-projects",
    "azure-ai-inference",
    "azure-ai-evaluation",
    "azure-identity",
    "azure-search-documents",
    "python-dotenv",
    "azure-monitor-opentelemetry",
    "azure-storage-blob",
    "uvicorn[standard]",
    "pandas",
]